fixed horizontal alignment

--- a/style.css
+++ b/style.css
@@ -5,26 +5,19 @@ html{
     font-family: 'Raleway', sans-serif;
 }
 
-
 .item{
-    display: inline-block;
+    border: 10px;
     padding: 1rem 1rem;
-    vertical-align: middle;
     word-wrap: normal;
     width: 125px;
-    display: inline-block;
+    display: block;
   
 }
 
 div img{
-    width:00px;
-    height:350px;
-
-    width:350px;
-    height:500px;
-    display: flex;
+    width:175px;
+    height:250px;
     border-radius: 15px;
-
 }
 
 .item:hover{
@@ -38,4 +31,11 @@ div img{
 
 a:link{
     text-decoration: none;
+}
+
+.item {
+    display: inline-grid;
+    margin: 20px;
+    text-align: center;
+
 }
